# grpc-gateway-custom

protoc-gen-grpc-crud/: BUILD.bazel  main.go
protoc-gen-grpc-crud/internal/gencrud/: doc.go  generator.go  generator_gateway.go  generator_test.go  template.go  template_gateway.go  template_test.go
protoc-gen-grpc-crud/internal/gencrud/configs/: config.go  config.yaml
protoc-gen-grpc-gateway/internal/gengateway/: generator.go  template.go
